fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   color: rgba(16, 24, 40, 1);
   outline:none;
   /* css debugger */
-  /* border:2px solid red; */
+  border:2px solid red;
 }
 
 
@@ -372,10 +372,10 @@ main {
 /* contact-us page */
 .contact-container{
   display: flex;
-  justify-content: space-between;
-  flex-direction: column;
+  justify-content: center;
   align-self: flex-start;
   align-items: self-start;
+  margin:0px 2em;
 
 }
 
@@ -420,6 +420,9 @@ padding-right:5px;
   width: 100%;
 height: 48px;
 }
-
+.contact-inner-container{
+  width:100%;
+  /* margin: 0px 3em 0px 3em ; */
+}
 
 }
